// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LskInputSelectBiller should match snapshot: selection not visible 1`] = `
<div>
  <div class="v-input v-input--has-state theme--light v-text-field v-select success--text">
    <div class="v-input__control">
      <div role="button"
           aria-haspopup="listbox"
           aria-expanded="false"
           aria-owns="list-4"
           class="v-input__slot"
      >
        <div class="v-select__slot">
          <label for="TEST_CID"
                 class="v-label theme--light success--text"
                 style="left: 0px; position: absolute;"
          >
            TEST LABEL
          </label>
          <div class="v-select__selections">
            <input id="TEST_CID"
                   readonly="readonly"
                   type="text"
                   aria-readonly="false"
                   autocomplete="off"
            >
          </div>
          <div class="v-input__append-inner">
            <div class="v-input__icon v-input__icon--append">
              <i aria-hidden="true"
                 class="v-icon notranslate mdi mdi-menu-down theme--light success--text"
              >
              </i>
            </div>
          </div>
          <input type="hidden"
                 value="1"
          >
        </div>
        <div class="v-menu">
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages theme--light success--text">
          <transition-group-stub tag="div"
                                 name="message-transition"
                                 class="v-messages__wrapper"
          >
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LskInputSelectBiller should match snapshot: selection visible 1`] = `
<div>
  <div class="v-input v-input--has-state v-input--is-focused theme--light v-text-field v-text-field--is-booted v-select v-select--is-menu-active success--text">
    <div class="v-input__control">
      <div role="button"
           aria-haspopup="listbox"
           aria-expanded="true"
           aria-owns="list-12"
           class="v-input__slot"
      >
        <div class="v-select__slot">
          <label for="TEST_CID"
                 class="v-label v-label--active theme--light success--text"
                 style="left: 0px; position: absolute;"
          >
            TEST LABEL
          </label>
          <div class="v-select__selections">
            <input id="TEST_CID"
                   readonly="readonly"
                   type="text"
                   aria-readonly="false"
                   autocomplete="off"
            >
          </div>
          <div class="v-input__append-inner">
            <div class="v-input__icon v-input__icon--append">
              <i aria-hidden="true"
                 class="v-icon notranslate mdi mdi-menu-down theme--light success--text"
              >
              </i>
            </div>
          </div>
          <input type="hidden"
                 value="1"
          >
        </div>
        <div class="v-menu">
          <transition-stub name="v-menu-transition">
            <div class="v-menu__content theme--light menuable__content__active "
                 style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
            >
              <div role="listbox"
                   tabindex="-1"
                   class="v-list v-select-list v-sheet theme--light theme--light"
                   id="list-12"
              >
                <div tabindex="0"
                     aria-selected="false"
                     id="list-item-19-0"
                     role="option"
                     class="v-list-item v-list-item--link theme--light"
                >
                  <div class="v-list-item__content">
                    <div class="v-list-item__title">
                      1. A, AA, AAA
                    </div>
                  </div>
                </div>
                <div tabindex="0"
                     aria-selected="false"
                     id="list-item-19-1"
                     role="option"
                     class="v-list-item v-list-item--link theme--light"
                >
                  <div class="v-list-item__content">
                    <div class="v-list-item__title">
                      2. B, BB, BBB
                    </div>
                  </div>
                </div>
                <div tabindex="0"
                     aria-selected="false"
                     id="list-item-19-2"
                     role="option"
                     class="v-list-item v-list-item--link theme--light"
                >
                  <div class="v-list-item__content">
                    <div class="v-list-item__title">
                      3. C, CC, CCC
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages theme--light success--text">
          <transition-group-stub tag="div"
                                 name="message-transition"
                                 class="v-messages__wrapper"
          >
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
